# high_precision_timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: example_logger.cpp  simple.cpp  utils.hpp
include/hpt/: timer.hpp
